--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/database": "^18.6.1",
+    "@react-native-firebase/storage": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -30,6 +33,8 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-simple-toast": "^3.0.2",
+    "react-native-uuid": "^2.0.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
