--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,7 +19,7 @@ buildscript {
     dependencies {
         classpath('com.android.tools.build:gradle:7.4.2')
         classpath('com.facebook.react:react-native-gradle-plugin')
-        classpath 'com.google.gms:google-services:4.4.0'
+         classpath 'com.google.gms:google-services:4.4.0'
         
     }
 }
@@ -33,6 +33,11 @@ allprojects {
         maven {
             // Android JSC is installed from npm
             url(new File(['node', '--print', "require.resolve('jsc-android/package.json')"].execute(null, rootDir).text.trim(), '../dist'))
+        }
+
+        maven {
+
+             url "$rootDir/../node_modules/@notifee/react-native/android/libs"
         }
 
         google()
