--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@notifee/react-native": "^5.7.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/database": "^18.6.1",
+    "@react-native-firebase/messaging": "^18.6.1",
     "@react-native-firebase/storage": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@zegocloud/react-native-callkeep": "^4.3.9",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.2.14",
+    "@zegocloud/zego-uikit-rn": "^2.4.1",
     "expo": "~49.0.15",
     "expo-av": "~13.4.1",
     "expo-contacts": "~12.2.0",
@@ -27,15 +32,21 @@
     "lottie-react-native": "5.1.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-delegate-component": "^1.0.0",
     "react-native": "0.72.6",
     "react-native-emoji-modal": "^0.2.4",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-simple-toast": "^3.0.2",
+    "react-native-sound": "^0.11.2",
     "react-native-uuid": "^2.0.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "zego-express-engine-reactnative": "^3.2.0",
+    "zego-zim-react-native": "^2.10.0",
+    "zego-zpns-react-native": "^2.5.0-alpha"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
