--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@notifee/react-native": "^5.7.0",
+    "@notifee/react-native": "^5.3.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/database": "^18.6.1",
@@ -29,6 +29,7 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
     "lottie-react-native": "5.1.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -36,14 +37,14 @@
     "react-native": "0.72.6",
     "react-native-emoji-modal": "^0.2.4",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "~3.22.0",
     "react-native-simple-toast": "^3.0.2",
     "react-native-sound": "^0.11.2",
     "react-native-uuid": "^2.0.1",
-    "tailwindcss": "^3.3.2",
     "zego-express-engine-reactnative": "^3.2.0",
     "zego-zim-react-native": "^2.10.0",
     "zego-zpns-react-native": "^2.5.0-alpha"
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
