--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@notifee/react-native": "^5.3.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/blur": "^4.3.2",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/database": "^18.6.1",
     "@react-native-firebase/messaging": "^18.6.1",
@@ -27,27 +28,27 @@
     "expo-contacts": "~12.2.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
-    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "lodash": "^4.17.21",
     "lottie-react-native": "5.1.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-delegate-component": "^1.0.0",
     "react-native": "0.72.6",
-    "react-native-emoji-modal": "^0.2.4",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gifted-chat": "^2.4.0",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-reanimated": "^3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "~3.22.0",
     "react-native-simple-toast": "^3.0.2",
     "react-native-sound": "^0.11.2",
+    "react-native-svg": "^13.14.0",
     "react-native-uuid": "^2.0.1",
     "zego-express-engine-reactnative": "^3.2.0",
     "zego-zim-react-native": "^2.10.0",
-    "zego-zpns-react-native": "^2.5.0-alpha"
+    "zego-zpns-react-native": "^2.5.0-alpha",
+    "expo-media-library": "~15.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
